# haskell-scrapbook

./: .gitignore  .gitlab-ci.yml  .stylish-haskell.yaml  ApplyToTuple.html  BinarySearch.html  CFold.html  Caesar.html  Colours.html  CountEntries.html  Cps.html  Expr.html  LICENSE  Lower.html  Makefile  Mod35.html  MonTrans.html  MyFilter.html  MyFreeMonad.html  MyJson.html  MyPenultimate.html  MyReverse.html  MyState.html  MyTake.html  MyType.html  Permutation.html  PolyDivisors.html  Qsort.html  README.md  Random.html  RecursionSchemes.html  RepMax.html  Scrapbook.cabal  SplitList.html  Stack.html  SubSeqs.html  Trim.html  Weekday.html  Yahtzee.html  ZipFold.html  benchmark-monTransBench.html  (+63 more)
HUnit-1.6.2.0/: HUnit.haddock  Test-HUnit-Base.html  Test-HUnit-Lang.html  Test-HUnit-Terminal.html  Test-HUnit-Text.html  Test-HUnit.html  doc-index.html  doc-index.json  index.html
OneTuple-0.4.1.1/: Data-Tuple-OneTuple.html  Data-Tuple-Solo.html  OneTuple.haddock
OneTuple-0.4.2/: Data-Tuple-OneTuple.html  Data-Tuple-Solo.html  OneTuple.haddock
QuickCheck-2.14.2/: QuickCheck.haddock  Test-QuickCheck-All.html  Test-QuickCheck-Arbitrary.html  Test-QuickCheck-Function.html  Test-QuickCheck-Gen-Unsafe.html  Test-QuickCheck-Gen.html  Test-QuickCheck-Modifiers.html  Test-QuickCheck-Monadic.html  Test-QuickCheck-Poly.html  Test-QuickCheck.html  doc-index-46.html  doc-index-58.html  doc-index-61.html  doc-index-62.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  doc-index.json  index.html
QuickCheck-2.14.3/: QuickCheck.haddock  Test-QuickCheck-All.html  Test-QuickCheck-Arbitrary.html  Test-QuickCheck-Function.html  Test-QuickCheck-Gen-Unsafe.html  Test-QuickCheck-Gen.html  Test-QuickCheck-Modifiers.html  Test-QuickCheck-Monadic.html  Test-QuickCheck-Poly.html  Test-QuickCheck.html  doc-index.json
Scrapbook-0.3.2/: ApplyToTuple.html  BinarySearch.html  CFold.html  Caesar.html  Colours.html  CountEntries.html  Cps.html  Expr.html  Lower.html  Mod35.html  MonTrans.html  MyFilter.html  MyFreeMonad.html  MyJson.html  MyPenultimate.html  MyReverse.html  MyState.html  MyTake.html  MyType.html  Permutation.html  PolyDivisors.html  Qsort.html  Random.html  RecursionSchemes.html  RepMax.html  Scrapbook.haddock  Scrapbook.txt  SplitList.html  Stack.html  SubSeqs.html  Trim.html  Weekday.html  Yahtzee.html  ZipFold.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  (+19 more)
Scrapbook-0.3.3/: ApplyToTuple.html  BinarySearch.html  CFold.html  Caesar.html  Colours.html  CountEntries.html  Cps.html  Expr.html  Lower.html  Mod35.html  MonTrans.html  MyFilter.html  MyFreeMonad.html  MyJson.html  MyPenultimate.html  MyReverse.html  MyState.html  MyTake.html  MyType.html  Permutation.html  PolyDivisors.html  Qsort.html  Random.html  RecursionSchemes.html  RepMax.html  Scrapbook.haddock  Scrapbook.txt  SplitList.html  Stack.html  SubSeqs.html  Trim.html  Weekday.html  Yahtzee.html  ZipFold.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  (+20 more)
Scrapbook-0.3.4/: ApplyToTuple.html  BinarySearch.html  CFold.html  Caesar.html  Colours.html  CountEntries.html  Cps.html  Expr.html  Lower.html  Mod35.html  MonTrans.html  MyFilter.html  MyFreeMonad.html  MyJson.html  MyPenultimate.html  MyReverse.html  MyState.html  MyTake.html  MyType.html  Permutation.html  PolyDivisors.html  Qsort.html  Random.html  RecursionSchemes.html  RepMax.html  Scrapbook.haddock  Scrapbook.txt  SplitList.html  Stack.html  SubSeqs.html  Trim.html  Weekday.html  Yahtzee.html  ZipFold.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  (+20 more)
Scrapbook-0.4.0/: ApplyToTuple.html  BinarySearch.html  CFold.html  Caesar.html  Colours.html  CountEntries.html  Cps.html  Expr.html  Fractions.html  HarmonicOscillation.html  Lower.html  Mod35.html  MonTrans.html  MyFilter.html  MyFreeMonad.html  MyJson.html  MyPenultimate.html  MyReverse.html  MyState.html  MySum.html  MyTake.html  MyType.html  Permutation.html  PolyDivisors.html  Qsort.html  Random.html  RecursionSchemes.html  RepMax.html  Scrapbook.haddock  Scrapbook.txt  SplitList.html  Stack.html  SubSeqs.html  TermFold.html  Trim.html  Weekday.html  Yahtzee.html  ZipFold.html  doc-index-A.html  doc-index-All.html  (+25 more)
StateVar-1.2.2/: Data-StateVar.html  StateVar.haddock  doc-index.json
aeson-2.1.2.1/: Data-Aeson-Decoding-ByteString-Lazy.html  Data-Aeson-Decoding-ByteString.html  Data-Aeson-Decoding-Tokens.html  Data-Aeson-Decoding.html  Data-Aeson-Encoding-Internal.html  Data-Aeson-Encoding.html  Data-Aeson-Internal-Time.html  Data-Aeson-Internal.html  Data-Aeson-Key.html  Data-Aeson-KeyMap.html  Data-Aeson-Parser-Internal.html  Data-Aeson-Parser.html  Data-Aeson-TH.html  Data-Aeson-Types.html  Data-Aeson.html  aeson.haddock  doc-index.json
all/: doc-index-124.html  doc-index-126.html  doc-index-33.html  doc-index-35.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-64.html  doc-index-92.html  doc-index-94.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  (+9 more)
ansi-terminal-0.11.3/: System-Console-ANSI-Codes.html  System-Console-ANSI-Types.html  doc-index.html  (+4 more)
(+4291 files in other folders)
