cabal-version:      3.0
name:               Scrapbook
version:            0.4.0
description:
  Please see the README on GitLab at
  <https://github.com/frankhjung/haskell-scrapbook#readme>

synopsis:           code examples
homepage:           https://github.com/frankhjung/haskell-scrapbook#readme
bug-reports:        https://github.com/frankhjung/haskell-scrapbook/issues
author:             Frank H Jung
maintainer:         frankhjung at linux.com
copyright:          Copyright © 2020-2025 Frank H Jung
license:            BSD-3-Clause
license-file:       LICENSE
category:           education
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/frankhjung/haskell-scrapbook

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    , aeson         ^>=2.1
    , base          ^>=4.18
    , bytestring    ^>=0.11
    , directory     ^>=1.3
    , filepath      ^>=1.4
    , free          ^>=5.2
    , hspec         ^>=2.11
    , mtl           ^>=2.3
    , QuickCheck    ^>=2.14
    , random        ^>=1.2
    , text          ^>=2.0
    , time          ^>=1.12
    , transformers  ^>=0.6

  exposed-modules:
    ApplyToTuple
    BinarySearch
    Caesar
    CFold
    Colours
    CountEntries
    Cps
    Expr
    Lower
    Mod35
    MonTrans
    MyFilter
    MyFreeMonad
    MyJson
    MyPenultimate
    MyReverse
    MyState
    MyTake
    MyType
    Permutation
    PolyDivisors
    Qsort
    Random
    RecursionSchemes
    RepMax
    SplitList
    Stack
    SubSeqs
    Trim
    Weekday
    Yahtzee
    ZipFold

executable counter
  hs-source-dirs:   app
  main-is:          Counter.hs
  default-language: Haskell2010
  build-depends:    base ^>=4.18
  ghc-options:
    -Wno-unrecognised-pragmas -Wno-unused-top-binds -threaded -rtsopts
    -with-rtsopts=-N

executable fpcomplete
  hs-source-dirs:   app
  main-is:          FPComplete.hs
  default-language: Haskell2010
  build-depends:    base ^>=4.18
  ghc-options:
    -Wno-unrecognised-pragmas -Wno-unused-top-binds -threaded -rtsopts
    -with-rtsopts=-N

executable json
  hs-source-dirs:   app
  main-is:          Json.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson       ^>=2.1
    , base        ^>=4.18
    , bytestring  ^>=0.11
    , containers  ^>=0.6
    , text        ^>=2.0

executable numberlines
  hs-source-dirs:   app
  main-is:          NumberLines.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base  ^>=4.18
    , fmt   ^>=0.6

executable polydivs
  hs-source-dirs:   app src
  main-is:          PolyDivs.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  other-modules:    PolyDivisors
  build-depends:
    , base       ^>=4.18
    , Scrapbook

executable quine
  hs-source-dirs:   app
  main-is:          Quine.hs
  default-language: Haskell2010
  ghc-options:
  build-depends:    base ^>=4.18

executable readfile
  hs-source-dirs:   app
  main-is:          ReadFile.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base  ^>=4.18
    , text  ^>=2.0

executable skips
  hs-source-dirs:   app
  main-is:          Skips.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base ^>=4.18

executable stategame
  hs-source-dirs:   app
  main-is:          StateGame.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base  ^>=4.18
    , mtl   ^>=2.3

executable threads
  hs-source-dirs:   app
  main-is:          Threads.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base  ^>=4.18
    , stm   ^>=2.5

executable vocab
  hs-source-dirs:   app
  main-is:          Vocab.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base  ^>=4.18
    , text  ^>=2.0

executable while
  hs-source-dirs:   app
  main-is:          While.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base ^>=4.18

executable wordcount
  hs-source-dirs:   app
  main-is:          WordCount.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
    , base  ^>=4.18
    , fmt   ^>=0.6

executable wordcountarrow
  hs-source-dirs:   app
  main-is:          WordCountArrow.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
    , base  ^>=4.18
    , fmt   ^>=0.6

test-suite test
  hs-source-dirs:     test
  main-is:            TestsSpec.hs
  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-missing-home-modules
  type:               exitcode-stdio-1.0
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    , aeson
    , base            ^>=4.18
    , bytestring
    , directory
    , filepath
    , free
    , hspec
    , hspec-discover
    , mtl
    , QuickCheck
    , random
    , Scrapbook
    , text
    , time
    , transformers

benchmark monTransBench
  hs-source-dirs:   bench src
  main-is:          MonTransBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  other-modules:    MonTrans
  build-depends:
    , base       ^>=4.18
    , criterion

benchmark myfilterBench
  hs-source-dirs:   bench src
  main-is:          MyFilterBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  other-modules:    MyFilter
  build-depends:
    , base       ^>=4.18
    , criterion

benchmark myreverseBench
  hs-source-dirs:   bench src
  main-is:          MyReverseBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  other-modules:    MyReverse
  build-depends:
    , base       ^>=4.18
    , criterion

benchmark polydivisorsBench
  hs-source-dirs:   bench src
  main-is:          PolyDivisorsBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  other-modules:    PolyDivisors
  build-depends:
    , base       ^>=4.18
    , criterion

benchmark recursionschemesBench
  hs-source-dirs:   bench src
  main-is:          RecursionSchemesBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  other-modules:    RecursionSchemes
  build-depends:
    , base       ^>=4.18
    , criterion

benchmark repmaxBench
  hs-source-dirs:   bench src
  main-is:          RepMaxBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  other-modules:    RepMax
  build-depends:
    , base       ^>=4.18
    , criterion

benchmark subseqsBench
  hs-source-dirs:   bench src
  main-is:          SubSeqsBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  other-modules:    SubSeqs
  build-depends:
    , base       ^>=4.18
    , criterion

benchmark zipfoldBench
  hs-source-dirs:   bench src
  main-is:          ZipFoldBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  other-modules:    ZipFold
  build-depends:
    , base       ^>=4.18
    , criterion
