cabal-version:      1.12

name:               scrapbook
version:            0.1.0
description:        Please see the README on GitLab at <https://github.com/frankhjung/haskell-scrapbook#readme>
synopsis:           code examples
homepage:           https://github.com/frankhjung/haskell-scrapbook#readme
bug-reports:        https://github.com/frankhjung/haskell-scrapbook/issues
author:             Frank H Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2020,2021,2022 Frank H Jung
license:            BSD3
license-file:       LICENSE
category:           education
build-type:         Simple
extra-source-files: README.md

source-repository   head
  type:             git
  location:         https://github.com/frankhjung/haskell-scrapbook

library
  exposed-modules:  BinarySearch
                  , CFold
                  , Cps
                  , Colours
                  , Compass
                  , CountEntries
                  , Lower
                  , Mod35
                  , MonTrans
                  , MyFilter
                  , MyPenultimate
                  , MyReverse
                  , Permutation
                  , PolyDivisors
                  , RecursionSchemes
                  , Qsort
                  , Random
                  , RepMax
                  , SplitList
                  , State
                  , Stack
                  , SubSeqs
                  , Trim
                  , Yahtzee
                  , ZipFold
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:    base >= 4 && < 5
                  , directory >= 1.3.3.0 && < 1.4
                  , filepath >= 1.4.2.1 && < 1.5
                  , mtl >= 2.2.2 && < 2.3
                  , random == 1.1 && < 1.2
                  , transformers >= 0.5.6.2 && < 0.5.7

executable          counter
  main-is:          Counter.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wno-unrecognised-pragmas
                    -Wno-unused-top-binds
                    -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base

executable          fpcomplete
  main-is:          FPComplete.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wno-unrecognised-pragmas
                    -Wno-unused-top-binds
                    -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base

executable          grandparents
  main-is:          Grandparents.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wno-unrecognised-pragmas
                    -Wno-unused-top-binds
                    -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , logict

executable          knights
  main-is:          Knights.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wno-unrecognised-pragmas
                    -Wno-unused-top-binds
                    -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , fmt

executable          magicians
  main-is:          Magicians.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wno-unrecognised-pragmas
                    -Wno-unused-top-binds
                    -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , fmt

executable          polydivs
  main-is:          PolyDivs.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , scrapbook

executable          quine
  main-is:          Quine.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
  build-depends:    base

executable          readfile
  main-is:          ReadFile.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base

executable          skips
  main-is:          Skips.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base

executable          threads
  main-is:          Threads.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , stm >= 2.5.0.0 && < 2.6

executable          vocab
  main-is:          Vocab.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , text >= 1.2.4.0 && < 1.3

executable          while
  main-is:          While.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base

executable          wordcount
  main-is:          WordCount.hs
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:    base

test-suite          test
  hs-source-dirs:   test
  main-is:          TestsSpec.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , directory >= 1.3.3.0 && < 1.4
                  , filepath >= 1.4.2.1 && < 1.5
                  , hspec >= 2.7.1 && < 2.8
                  , mtl >= 2.2.2 && < 2.3
                  , QuickCheck >= 2.13.2 && < 2.14
                  , scrapbook
                  , transformers >= 0.5.6.2 && < 0.5.7
  build-tool-depends:
                    hspec-discover:hspec-discover
  other-modules:    BinarySearchSpec
                  , CFoldSpec
                  , ColoursSpec
                  , CompassSpec
                  , CountEntriesSpec
                  , CpsSpec
                  , LowerSpec
                  , Mod35Spec
                  , MonTransSpec
                  , MyFilterSpec
                  , MyPenultimateSpec
                  , MyReverseSpec
                  , PermutationSpec
                  , PolyDivisorsSpec
                  , QsortSpec
                  , RandomSpec
                  , RecursionSchemesSpec
                  , RepMaxSpec
                  , StackSpec
                  , SplitListSpec
                  , SubSeqsSpec
                  , TrimSpec
                  , YahtzeeSpec
                  , ZipFoldSpec

benchmark           myfilterBench
  main-is:          MyFilterBench.hs
  hs-source-dirs:   bench
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion >= 1.5.7.0 && < 1.5.8
                  , scrapbook

benchmark           myreverseBench
  main-is:          MyReverseBench.hs
  hs-source-dirs:   bench
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
                  , scrapbook

benchmark           polydivisorsBench
  main-is:          PolyDivisorsBench.hs
  hs-source-dirs:   bench
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
                  , scrapbook

benchmark           repmaxBench
  main-is:          RepMaxBench.hs
  hs-source-dirs:   bench
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
                  , scrapbook

benchmark           subseqsBench
  main-is:          SubSeqsBench.hs
  hs-source-dirs:   bench
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
                  , scrapbook

benchmark           zipfoldBench
  main-is:          ZipFoldBench.hs
  hs-source-dirs:   bench
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
                  , scrapbook
