cabal-version:      3.0

name:               scrapbook
version:            0.1.0
description:        Please see the README on GitLab at <https://github.com/frankhjung/haskell-scrapbook#readme>
synopsis:           code examples
homepage:           https://github.com/frankhjung/haskell-scrapbook#readme
bug-reports:        https://github.com/frankhjung/haskell-scrapbook/issues
author:             Frank H Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2020-2022 Frank H Jung
license:            BSD-3-Clause
license-file:       LICENSE
category:           education
build-type:         Simple
extra-source-files: README.md

source-repository   head
  type:             git
  location:         https://github.com/frankhjung/haskell-scrapbook

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  exposed-modules:  ApplyToTuple
                  , BinarySearch
                  , Caesar
                  , CFold
                  , Cps
                  , Colours
                  , CountEntries
                  , Lower
                  , Mod35
                  , MonTrans
                  , MyFilter
                  , MyPenultimate
                  , MyReverse
                  , MyTake
                  , MyType
                  , Permutation
                  , PolyDivisors
                  , RecursionSchemes
                  , Qsort
                  , Random
                  , RepMax
                  , SplitList
                  , State
                  , Stack
                  , SubSeqs
                  , Trim
                  , Weekday
                  , Yahtzee
                  , ZipFold
  build-depends:    base >= 4 && < 5
                  , directory >= 1.3.3.0 && < 1.4
                  , filepath >= 1.4.2.1 && < 1.5
                  , hspec >= 2.7 && < 2.9
                  , mtl >= 2.2.2 && < 2.3
                  , QuickCheck >= 2.13.2 && < 2.15
                  , random >= 1.2.0 && < 1.3
                  , transformers >= 0.5.6.2 && < 0.5.7

executable          counter
  hs-source-dirs:   app
  main-is:          Counter.hs
  default-language: Haskell2010
  ghc-options:      -Wno-unrecognised-pragmas
                    -Wno-unused-top-binds
                    -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base

executable          fpcomplete
  hs-source-dirs:   app
  main-is:          FPComplete.hs
  default-language: Haskell2010
  ghc-options:      -Wno-unrecognised-pragmas
                    -Wno-unused-top-binds
                    -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base

executable          numberlines
  hs-source-dirs:   app
  main-is:          NumberLines.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , fmt >= 0.6.3 && < 0.7

executable          polydivs
  hs-source-dirs:   app
  main-is:          PolyDivs.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , scrapbook

executable          quine
  hs-source-dirs:   app
  main-is:          Quine.hs
  default-language: Haskell2010
  ghc-options:
  build-depends:    base

executable          readfile
  hs-source-dirs:   app
  main-is:          ReadFile.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base

executable          skips
  hs-source-dirs:   app
  main-is:          Skips.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base

executable          threads
  hs-source-dirs:   app
  main-is:          Threads.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , stm >= 2.5.0.0 && < 2.6

executable          vocab
  hs-source-dirs:   app
  main-is:          Vocab.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , text >= 1.2.4.0 && < 1.3

executable          while
  hs-source-dirs:   app
  main-is:          While.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base

executable          wordcount
  hs-source-dirs:   app
  main-is:          WordCount.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:    base

test-suite          test
  hs-source-dirs:   test
  main-is:          TestsSpec.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , directory
                  , filepath
                  , hspec
                  , mtl
                  , QuickCheck
                  , scrapbook
                  , transformers
  build-tool-depends:
                    hspec-discover:hspec-discover
  other-modules:    ApplyToTupleSpec
                  , BinarySearchSpec
                  , CaesarSpec
                  , CFoldSpec
                  , ColoursSpec
                  , CountEntriesSpec
                  , CpsSpec
                  , LowerSpec
                  , Mod35Spec
                  , MonTransSpec
                  , MyFilterSpec
                  , MyPenultimateSpec
                  , MyReverseSpec
                  , MyTakeSpec
                  , MyTypeSpec
                  , PermutationSpec
                  , PolyDivisorsSpec
                  , QsortSpec
                  , RandomSpec
                  , RecursionSchemesSpec
                  , RepMaxSpec
                  , StackSpec
                  , SplitListSpec
                  , SubSeqsSpec
                  , TrimSpec
                  , WeekdaySpec
                  , YahtzeeSpec
                  , ZipFoldSpec

benchmark           myfilterBench
  hs-source-dirs:   bench
  main-is:          MyFilterBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion >= 1.5.7.0 && < 1.5.14
                  , scrapbook

benchmark           myreverseBench
  hs-source-dirs:   bench
  main-is:          MyReverseBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
                  , scrapbook

benchmark           polydivisorsBench
  hs-source-dirs:   bench
  main-is:          PolyDivisorsBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
                  , scrapbook

benchmark           recursionschemesBench
  hs-source-dirs:   bench
  main-is:          RecursionSchemesBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
                  , scrapbook

benchmark           repmaxBench
  hs-source-dirs:   bench
  main-is:          RepMaxBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
                  , scrapbook

benchmark           subseqsBench
  hs-source-dirs:   bench
  main-is:          SubSeqsBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
                  , scrapbook

benchmark           zipfoldBench
  hs-source-dirs:   bench
  main-is:          ZipFoldBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
                  , scrapbook
