cabal-version:      3.0

name:               scrapbook
version:            0.1.0
description:        Please see the README on GitLab at <https://github.com/frankhjung/haskell-scrapbook#readme>
synopsis:           code examples
homepage:           https://github.com/frankhjung/haskell-scrapbook#readme
bug-reports:        https://github.com/frankhjung/haskell-scrapbook/issues
author:             Frank H Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2020-2022 Frank H Jung
license:            BSD-3-Clause
license-file:       LICENSE
category:           education
extra-source-files: README.md

source-repository   head
  type:             git
  location:         https://github.com/frankhjung/haskell-scrapbook

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  exposed-modules:  ApplyToTuple
                  , BinarySearch
                  , Caesar
                  , CFold
                  , Cps
                  , Colours
                  , CountEntries
                  , Lower
                  , Mod35
                  , MonTrans
                  , MyFilter
                  , MyFreeMonad
                  , MyJson
                  , MyPenultimate
                  , MyReverse
                  , MyTake
                  , MyType
                  , Permutation
                  , PolyDivisors
                  , RecursionSchemes
                  , Qsort
                  , Random
                  , RepMax
                  , SplitList
                  , MyState
                  , Stack
                  , SubSeqs
                  , Trim
                  , Weekday
                  , Yahtzee
                  , ZipFold
  build-depends:    base >= 4 && < 5
                  , aeson >= 2.0.3.0 && < 2.1
                  , bytestring >= 0.10.12.1 && < 0.11
                  , directory >= 1.3.3.0 && < 1.4
                  , filepath >= 1.4.2.1 && < 1.5
                  , free >= 5.1.9 && < 5.2
                  , hspec >= 2.7 && < 2.9
                  , mtl >= 2.2.2 && < 2.3
                  , QuickCheck >= 2.13.2 && < 2.15
                  , random >= 1.2.0 && < 1.3
                  , text >= 1.2.4.0 && < 1.3
                  , transformers >= 0.5.6.2 && < 0.5.7

executable          counter
  hs-source-dirs:   app
  main-is:          Counter.hs
  default-language: Haskell2010
  ghc-options:      -Wno-unrecognised-pragmas
                    -Wno-unused-top-binds
                    -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base

executable          fpcomplete
  hs-source-dirs:   app
  main-is:          FPComplete.hs
  default-language: Haskell2010
  ghc-options:      -Wno-unrecognised-pragmas
                    -Wno-unused-top-binds
                    -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base

executable          numberlines
  hs-source-dirs:   app
  main-is:          NumberLines.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , fmt >= 0.6.3 && < 0.7

executable          polydivs
  hs-source-dirs:   app
                  , src
  main-is:          PolyDivs.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , scrapbook
  other-modules:    PolyDivisors

executable          quine
  hs-source-dirs:   app
  main-is:          Quine.hs
  default-language: Haskell2010
  ghc-options:
  build-depends:    base

executable          readfile
  hs-source-dirs:   app
  main-is:          ReadFile.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base

executable          skips
  hs-source-dirs:   app
  main-is:          Skips.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base

executable          stategame
  hs-source-dirs:   app
  main-is:          StateGame.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , mtl >= 2.2 && < 2.3

executable          threads
  hs-source-dirs:   app
  main-is:          Threads.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , stm >= 2.5.0.0 && < 2.6

executable          vocab
  hs-source-dirs:   app
  main-is:          Vocab.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , text

executable          while
  hs-source-dirs:   app
  main-is:          While.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base

executable          wordcount
  hs-source-dirs:   app
  main-is:          WordCount.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:    base

test-suite          test
  hs-source-dirs:   test
                  , src
  main-is:          TestsSpec.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , aeson
                  , bytestring
                  , directory
                  , filepath
                  , free
                  , hspec
                  , mtl
                  , QuickCheck
                  , random
                  , text
                  , transformers
                  , scrapbook
  build-tool-depends:
                    hspec-discover:hspec-discover
  other-modules:    ApplyToTuple
                  , ApplyToTupleSpec
                  , BinarySearch
                  , BinarySearchSpec
                  , Caesar
                  , CaesarSpec
                  , CFold
                  , CFoldSpec
                  , Colours
                  , ColoursSpec
                  , CountEntries
                  , CountEntriesSpec
                  , Cps
                  , CpsSpec
                  , Lower
                  , LowerSpec
                  , Mod35
                  , Mod35Spec
                  , MonTrans
                  , MonTransSpec
                  , MyFilter
                  , MyFilterSpec
                  , MyFreeMonad
                  , MyFreeMonadSpec
                  , MyJson
                  , MyJsonSpec
                  , MyPenultimate
                  , MyPenultimateSpec
                  , MyReverse
                  , MyReverseSpec
                  , MyTake
                  , MyTakeSpec
                  , MyType
                  , MyTypeSpec
                  , Permutation
                  , PermutationSpec
                  , PolyDivisors
                  , PolyDivisorsSpec
                  , Qsort
                  , QsortSpec
                  , Random
                  , RandomSpec
                  , RecursionSchemes
                  , RecursionSchemesSpec
                  , RepMax
                  , RepMaxSpec
                  , SplitList
                  , SplitListSpec
                  , Stack
                  , StackSpec
                  , MyState
                  , SubSeqs
                  , SubSeqsSpec
                  , Trim
                  , TrimSpec
                  , Weekday
                  , WeekdaySpec
                  , Yahtzee
                  , YahtzeeSpec
                  , ZipFold
                  , ZipFoldSpec

benchmark           monTransBench
  hs-source-dirs:   bench
                  , src
  main-is:          MonTransBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion >= 1.5.7.0 && < 1.5.14
  other-modules:    MonTrans

benchmark           myfilterBench
  hs-source-dirs:   bench
                  , src
  main-is:          MyFilterBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
  other-modules:    MyFilter

benchmark           myreverseBench
  hs-source-dirs:   bench
                  , src
  main-is:          MyReverseBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
  other-modules:    MyReverse

benchmark           polydivisorsBench
  hs-source-dirs:   bench
                  , src
  main-is:          PolyDivisorsBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
  other-modules:    PolyDivisors

benchmark           recursionschemesBench
  hs-source-dirs:   bench
                  , src
  main-is:          RecursionSchemesBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
  other-modules:    RecursionSchemes

benchmark           repmaxBench
  hs-source-dirs:   bench
                  , src
  main-is:          RepMaxBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
  other-modules:    RepMax

benchmark           subseqsBench
  hs-source-dirs:   bench
                  , src
  main-is:          SubSeqsBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
  other-modules:    SubSeqs

benchmark           zipfoldBench
  hs-source-dirs:   bench
                  , src
  main-is:          ZipFoldBench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
  other-modules:    ZipFold
